cluster_components_template/azure/servicemesh/istio/istio-gateways/istio-ext-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ext-gateway
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
  - port:
     number: 80
     name: http
     protocol: HTTP
    hosts:
    - "<<istio_ingress_gateway_host>>"
  - port:
     number: 443
     name: https
     protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: ssl-cert-secret
      minProtocolVersion: TLSV1_2
    hosts:
    - "<<istio_ingress_gateway_host>>"
